--- a/src/list.html
+++ b/src/list.html
@@ -2,7 +2,7 @@
  * @Author: DongBingnan
  * @Date: 2020-08-10 13:59:09
  * @LastEditors: DongBingnan
- * @LastEditTime: 2020-08-10 16:05:39
+ * @LastEditTime: 2020-08-11 09:10:38
  * @Description: file content
  * @FilePath: \wampRoot\damaiwang\src\list.html
 -->
@@ -19,17 +19,17 @@
     <link rel="stylesheet" href="css/foot.css">
     <link rel="stylesheet" href="css/head.css">
     <link rel="stylesheet" href="css/sidebar.css">
-
     <script src="script/jquery-1.10.1.min.js"></script>
+
 </head>
 
 <body>
-    <script src="script/list.js"></script>
+
     <!-- header -->
     <div class="header"></div>
     <script>$(".header").load("./head.html")</script>
     <!-- content -->
-    <div class="sort main-sort">
+    <div class="sort main-sort main">
         <div class="sort_fl">
             <span class="sort-item">相关度排序</span>
             <span class="sort-item sort-item-active">推荐排序</span>
@@ -37,15 +37,15 @@
             <span class="sort-item">最新上架</span>
         </div>
         <div class="pagination-top sort_fr">
-            <i>&lt;</i>
+            <i>〈</i>
             <div class="sort__num">
                 <span>1</span>/
                 <span>9</span>
             </div>
-            <i>&gt;</i>
+            <i>〉</i>
         </div>
     </div>
-    <div class="itembox">
+    <div class="itembox main">
 
     </div>
     <!-- footer -->
@@ -54,6 +54,7 @@
     <!-- sidebar -->
     <div class="sidebar"></div>
     <script>$(".sidebar").load("./sidebar.html")</script>
+    <script src="script/list.js"></script>
 </body>
 
 </html>
